# predictsolver

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
apps/: sample_app.py
apps/dataapi/: README.md  package.json  pnpm-lock.yaml
apps/dataapi/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
apps/dataapi/src/models/: models.controller.ts  models.service.ts
apps/dataapi/src/models/dto/: model-info.dto.ts  prediction.dto.ts
core/: setup.py
core/predictsolver_core/api/: __init__.py  api_connector.py
core/predictsolver_core/models/: base.py
core/predictsolver_core/utils/: preprocessing.py
docs/: index.md  poe-tasks.md
tests/core/: test_preprocessing.py
tools/: integration_test.py
