[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.poe.tasks]
# Environment setup tasks
setup = { cmd = "uv venv && source .venv/bin/activate" }
install = { cmd = "uv pip install -r requirements.txt" }
install-dev = { cmd = "cd core && uv pip install -e . && cd .." }

# Run apps
run-sample = { cmd = "python apps/sample_app.py" }

# Development tasks
lint = { cmd = "flake8 core apps tests" }
format = { cmd = "black core apps tests" }
test = { cmd = "pytest" }
test-core = { cmd = "pytest tests/core" }

# Combined tasks
setup-all = { sequence = ["setup", "install", "install-dev"] }
check = { sequence = ["lint", "test"] }
